--- a/notebooks/practice_02.ipynb
+++ b/notebooks/practice_02.ipynb
@@ -1095,12 +1095,22 @@
     "Remember the cat vs dog dataset?\\\n",
     "You can now build a neural network to classify the images of cats and dogs.\n",
     "\n",
-    "> **Try to test our neural network on the cat vs dog dataset.**"
+    "> **We'll try to test our neural network on the cat vs dog dataset.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eba0c5ef",
+   "metadata": {},
+   "source": [
+    "But before that, tell me what to do first. Tell me what is one of the most important thing to do before training a neural network.\n",
+    "\n",
+    "## Data Preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 69,
    "id": "8b33e44a",
    "metadata": {},
    "outputs": [],
@@ -1111,8 +1121,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a2447905",
+   "metadata": {},
+   "source": [
+    "First, we need to preprocess the data.\n",
+    "- **Load the data**: Load the cat vs dog dataset.\n",
+    "- **Resize the images**: Resize the images to a fixed size (e.g., 64x64 pixels).\n",
+    "- **Normalize the pixel values**: Scale the pixel values to be between 0 and 1.\n",
+    "- **Split the data**: Split the data into training and test sets."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 93,
    "id": "560e5d75",
    "metadata": {},
    "outputs": [],
@@ -1121,108 +1143,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "58f7bd93",
+   "metadata": {},
+   "source": [
+    "The data is already split into training and test sets, so we just need to load the data and preprocess it."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 95,
    "id": "9c509236",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1000, 64, 64)"
+       "((1000, 64, 64), (1000, 1), (200, 64, 64), (200, 1))"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train.shape"
+    "X_train.shape, y_train.shape, X_test.shape, y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a4575e9",
+   "metadata": {},
+   "source": [
+    "1000 images of cats and dogs of 64x64 pixels.\n",
+    "\n",
+    "We work woth a neural network, so we need to transpose the data to have the shape we want: (n_features, n_samples) here."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 96,
    "id": "4d064221",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(64, 64, 1000)"
+       "((64, 64, 1000), (64, 64, 200))"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X_train = X_train.T\n",
-    "X_train.shape\n",
+    "X_test = X_test.T\n",
+    "X_train.shape, X_test.shape\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 98,
    "id": "cc57aa2c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.64566929, 0.16535433, 0.10629921, ..., 0.18503937, 0.99212598,\n",
-       "        0.48031496],\n",
-       "       [0.63779528, 0.1496063 , 0.11417323, ..., 0.21653543, 0.99212598,\n",
-       "        0.49606299],\n",
-       "       [0.62204724, 0.17716535, 0.11023622, ..., 0.22834646, 0.99212598,\n",
-       "        0.5       ],\n",
-       "       ...,\n",
-       "       [0.68110236, 0.32283465, 0.48425197, ..., 0.81496063, 0.26377953,\n",
-       "        0.63385827],\n",
-       "       [0.48818898, 0.26771654, 0.54330709, ..., 0.77952756, 0.22834646,\n",
-       "        0.62992126],\n",
-       "       [0.15354331, 0.21653543, 0.47637795, ..., 0.7992126 , 0.23228346,\n",
-       "        0.62992126]])"
+       "((4096, 1000), (4096, 200))"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X_train_reshaped = X_train.reshape(-1, X_train.shape[-1]) / X_train.max()\n",
-    "X_train_reshaped.shape\n",
-    "X_train_reshaped"
+    "X_test_reshaped = X_test.reshape(-1, X_test.shape[-1]) / X_test.max()\n",
+    "X_train_reshaped.shape, X_test_reshaped.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b3c1911",
+   "metadata": {},
+   "source": [
+    "Perfect. 4096 features for each image, and 1000 images in total for the training and 200 for the test.\n",
+    "\n",
+    "Remember ? Each image is now a vector of 4096 variables that represents each pixel values of the image.\n",
+    "\n",
+    "Normalizing these values and putting all the images in an array of shape (4096, 1000), and you have your dataset ready to be used in a neural network."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 100,
    "id": "32e3f9aa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1000, 1)"
+       "((1000, 1), (200, 1))"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_train.shape"
+    "y_train.shape, y_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 101,
    "id": "f0aae39c",
    "metadata": {},
    "outputs": [],
@@ -1234,7 +1276,7 @@
     "    b2 = parameters['b2']\n",
     "\n",
     "    Z1 = W1.dot(X) + b1\n",
-    "    Z1 = np.clip(Z1, -500, 500)  # add this line to avoid overflow\n",
+    "    \n",
     "    A1 = 1 / (1 + np.exp(-Z1))\n",
     "\n",
     "    Z2 = W2.dot(A1) + b2\n",
@@ -1245,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 102,
    "id": "4a4e7ad5",
    "metadata": {},
    "outputs": [],
@@ -1278,45 +1320,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "58d5c7bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def neural_network2(X, y, n1=32, learning_rate=0.1, epoch=1000):\n",
+    "def neural_network2(X_train, y_train, X_test, y_test, n1=32, learning_rate=0.1, epoch=1000):\n",
     "    def log_loss(A, y):\n",
     "        m = len(y)\n",
     "        epsilon = 1e-15\n",
     "        return -1/m * np.sum(y * np.log(A + epsilon) + (1 - y) * np.log(1 - A + epsilon))\n",
     "\n",
     "    # Dimensions\n",
-    "    n0 = X.shape[0]  # input dimension\n",
-    "    n2 = 1  # output dimension (binary classification again between cats and dogs)\n",
+    "    n0 = X_train.shape[0]  # input dimension\n",
+    "    n2 = y_train.shape[1]  # output dimension (binary classification again between cats and dogs)\n",
     "\n",
     "    # Init\n",
     "    np.random.seed(0)\n",
+    "\n",
+    "    # nural network structure initialisation\n",
     "    parameters = initialisation(n0, n1, n2)\n",
     "\n",
     "    train_loss = []\n",
+    "    test_loss = []\n",
     "    train_acc = []\n",
+    "    test_acc = []\n",
     "\n",
     "    for i in tqdm(range(epoch)):\n",
     "        # Forward\n",
-    "        activations = forward_propagation(X, parameters)\n",
+    "        activations = forward_propagation(X_train, parameters)\n",
     "        A2 = activations['A2'].flatten()  # output\n",
-    "        y_flat = y.flatten()\n",
+    "\n",
+    "        # Train\n",
+    "            # Loss\n",
+    "        y_train = y_train.flatten()\n",
+    "        train_loss.append(log_loss(A2, y_train))\n",
+    "\n",
+    "            # Accuracy\n",
+    "        y_pred = predict(X_train, parameters).flatten()\n",
+    "        train_acc.append(accuracy_score(y_train, y_pred))\n",
+    "\n",
+    "        # Test\n",
+    "            # Loss\n",
+    "        y_test = y_test.flatten()\n",
     "\n",
     "\n",
-    "        # Loss\n",
-    "        loss = log_loss(A2, y_flat)\n",
-    "        train_loss.append(loss)\n",
-    "\n",
-    "        # Accuracy\n",
-    "        y_pred = predict(X, parameters).flatten()\n",
-    "        acc = accuracy_score(y_flat, y_pred)\n",
-    "        train_acc.append(acc)\n",
-    "\n",
-    "        # Backprop + Update\n",
+    "        # Update\n",
     "        gradients = back_propagation(X, y, parameters, activations)\n",
     "        parameters = update(gradients, parameters, learning_rate)\n",
     "\n",
@@ -1339,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "id": "2fdf9e07",
    "metadata": {},
    "outputs": [
@@ -1347,7 +1396,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:15<00:00, 62.98it/s]\n"
+      "  0%|          | 0/1000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:15<00:00, 62.73it/s]\n"
      ]
     },
     {
