--- a/notebooks/practice_01.ipynb
+++ b/notebooks/practice_01.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "id": "5308289c",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,8 @@
     "import matplotlib.pyplot as plt\n",
     "import nbimporter\n",
     "from utilities import *\n",
-    "from practice_00 import artificial_neuron, initialisation, model, gradients, update, predict, accuracy_score"
+    "from practice_00 import artificial_neuron, initialisation, model, gradients, update, predict, accuracy_score\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -715,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ba5ecfd8",
    "metadata": {},
    "outputs": [],
