--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -41,7 +41,11 @@
    "source": [
     "# Example: A Simple Binary Classification Problem\n",
     "\n",
-    "We will look at how the math behind this architecture works by taking a binary classification model. Don't be afraid of the terms, they will make sense later. What you need to understand is that this model allows for linearly separating two classes.\n",
+    "We will look at how the math behind this architecture works by taking a binary classification model. Don't be afraid of the terms, they will make sense later.\\\n",
+    "\n",
+    "> A neural network is like a team of decision-makers (neurons), each making a tiny choice based on inputs. Combined, they learn complex patterns — like how you recognize faces or letters.\n",
+    "\n",
+    "What you need to understand is that this model allows for linearly separating two classes.\n",
     "\n",
     "Suppose we have two types of plants:\n",
     "- Toxic plants (labeled $y = 1$)\n",
@@ -167,6 +171,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "53d4b165",
+   "metadata": {},
+   "source": [
+    "> Activation functions like the sigmoid help neurons express 'how confident' they are — not just yes/no, but a value between 0 and 1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dbf57f51",
    "metadata": {},
    "source": [
@@ -230,6 +242,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "86d8a85c",
+   "metadata": {},
+   "source": [
+    "> The sigmoid curve starts near 0, rises smoothly, and levels off near 1. Perfect for translating raw scores into probabilities."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7c913572",
    "metadata": {},
    "source": [
@@ -285,6 +305,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "42ae969d",
+   "metadata": {},
+   "source": [
+    "> A Bernoulli distribution models binary outcomes — like flipping a coin, or classifying yes/no. A sigmoid function helps model this kind of decision."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6bf77346",
    "metadata": {},
    "source": [
@@ -315,6 +343,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "216f3b6e",
+   "metadata": {},
+   "source": [
+    "> Once a model predicts something, we need to measure how good that prediction is — that's evaluation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0c57687e",
    "metadata": {},
    "source": [
@@ -325,6 +361,14 @@
     "$$ \\lim_{N \\to \\infty} L(W,b) = 0 $$\n",
     "\n",
     "This is hard to work with numerically."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6cc310c",
+   "metadata": {},
+   "source": [
+    "> When multiplying many small probabilities, the result becomes tiny (numerical underflow). That’s a problem for computers."
    ]
   },
   {
@@ -343,18 +387,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c5d6ef09",
+   "metadata": {},
+   "source": [
+    "> Taking the logarithm of probabilities turns products into sums — making things more stable and easier to compute."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2103b67b",
    "metadata": {},
    "source": [
     "# Defining the Cost Function: Log-Loss\n",
     "\n",
-    "This likelihood function is called the cost function. It allows us to quantify the error between the model's predictions and the true data. The higher the likelihood, the better the model's performance.\n",
+    "This likelihood function is called the cost (or loss) function. It allows us to quantify the error between the model's predictions and the true data. The higher the likelihood, the better the model's performance.\n",
     "\n",
     "Therefore, we need to maximize this likelihood to obtain the best possible model.\n",
     "\n",
     "But in data science, we never aim to maximize; we aim to minimize. So, we take the opposite approach.\n",
     "\n",
     "We add a negative sign and a factor of $1/N$ normalize the cost function so that it falls between 0 and 1. Nothing more."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9def94e5",
+   "metadata": {},
+   "source": [
+    "> The cost function tells us 'how wrong' the model is. Log-loss punishes confident but wrong predictions heavily."
    ]
   },
   {
@@ -391,6 +451,14 @@
     "But first, we need to know: How does the Log-Loss change when we slightly change $w$ or $b$? That way we can adjust them in the right direction.\n",
     "\n",
     "Answer: we calculate the **gradient** (the derivative)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83b0d04a",
+   "metadata": {},
+   "source": [
+    "> Gradient descent is like skiing down a hill: you go in the direction that reduces the friction (the error) the most, to maximize your speed (accuracy)."
    ]
   },
   {
