--- a/notebooks/practice_02.ipynb
+++ b/notebooks/practice_02.ipynb
@@ -1110,31 +1110,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 129,
    "id": "8b33e44a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: h5py in /Users/pierrechambet/Desktop/wtf-is-deep-learning/.venv/lib/python3.9/site-packages (3.13.0)\n",
-      "Requirement already satisfied: numpy>=1.19.3 in /Users/pierrechambet/Desktop/wtf-is-deep-learning/.venv/lib/python3.9/site-packages (from h5py) (2.0.2)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.1.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: nbimporter in /Users/pierrechambet/Desktop/wtf-is-deep-learning/.venv/lib/python3.9/site-packages (0.3.4)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.1.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install h5py\n",
-    "%pip install nbimporter\n",
+    "#%pip install h5py\n",
+    "#%pip install nbimporter\n",
     "from utilities import *"
    ]
   },
@@ -1152,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 130,
    "id": "560e5d75",
    "metadata": {},
    "outputs": [
