--- a/notebooks/practice_03.ipynb
+++ b/notebooks/practice_03.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8396ec2d",
    "metadata": {},
    "outputs": [
@@ -49,12 +49,12 @@
    "id": "db2ad3a6",
    "metadata": {},
    "source": [
-    "More porecisely, we are coding to code this :"
+    "More precisely, we are coding to code this :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c982cc33",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4853c408",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ebf997e0",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b9be972d",
    "metadata": {},
    "outputs": [
@@ -142,13 +142,46 @@
     "dimensions = [2, 32, 32, 1]\n",
     "\n",
     "parameters = initialisation(dimensions)\n",
+    "\n",
     "for key, value in parameters.items():\n",
     "    print(key, value.shape)\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3056642e",
+   "metadata": {},
+   "source": [
+    "Here you are, you just build the same neural network as shown in the picture above.\n",
+    "\n",
+    "Now we have to give this neural network a purpose, a consciousness, a goal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ee486f0",
+   "metadata": {},
+   "source": [
+    "# Forward propagation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc62a7c9",
+   "metadata": {},
+   "source": [
+    "Remember the forward propagation we did in the previous notebook ?\n",
+    "\n",
+    "There were one thing very important to remember.\n",
+    "\n",
+    "The first layer (input layer) takes as input the data. But the second layer (hidden layer) takes as input the output of the first layer.\n",
+    "\n",
+    "We are going to generalize that. In fact, we are going to say that the i-th hidden layer takes as input the output of the (i-1)-th hidden layer, from the first layer (input layer) to the last layer (output layer)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e82c2921",
    "metadata": {},
    "outputs": [],
@@ -172,6 +205,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "30e2beea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def forward_propagation(X, parameters, dimensions):\n",
+    "\n",
+    "    activations = {}\n",
+    "\n",
+    "    activations[f'A{0}'] = X\n",
+    "\n",
+    "    for i in range(1, len(dimensions)):\n",
+    "\n",
+    "        W, b = dimensions[f'W{i}'], dimensions[f'b{i}']\n",
+    "\n",
+    "        A = activations[f'A{i-1}']\n",
+    "\n",
+    "        Z = W.dot(A) + b\n",
+    "        \n",
+    "        activations[f'A{i}'] = 1 / (1 + np.exp(-Z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "26c1b1f1",
    "metadata": {},
    "outputs": [],
@@ -204,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "88bcc9c0",
    "metadata": {},
    "outputs": [],
@@ -217,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "754ac915",
    "metadata": {},
    "outputs": [],
