--- a/notebooks/practice_03.ipynb
+++ b/notebooks/practice_03.ipynb
@@ -102,6 +102,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5eeb61f",
+   "metadata": {},
+   "source": [
+    "## Initialization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "ebf997e0",
@@ -109,14 +117,22 @@
    "outputs": [],
    "source": [
     "def initialisation(dimensions):\n",
+    "    # Create a dictionary to store the weights (W) and biases (b)\n",
     "    parameters = {}\n",
     "\n",
+    "    # Total number of layers (input + hidden + output)\n",
     "    L = len(dimensions)\n",
-    "    for l in range(1, L):\n",
-    "        parameters[f'W{l}'] = np.random.randn(dimensions[l], dimensions[l-1])\n",
-    "        parameters[f'b{l}'] = np.random.randn(dimensions[l], 1)  \n",
     "\n",
-    "    return parameters"
+    "    # Loop through each layer starting from 1 (layer 0 is the input layer)\n",
+    "    for l in range(1, L):\n",
+    "        # Initialize weights with random values: shape (neurons in current layer, neurons in previous layer)\n",
+    "        parameters[f'W{l}'] = np.random.randn(dimensions[l], dimensions[l-1])\n",
+    "\n",
+    "        # Initialize biases with random values: shape (neurons in current layer, 1)\n",
+    "        parameters[f'b{l}'] = np.random.randn(dimensions[l], 1)\n",
+    "\n",
+    "    # Return the dictionary containing all parameters\n",
+    "    return parameters\n"
    ]
   },
   {
@@ -139,12 +155,15 @@
     }
    ],
    "source": [
-    "dimensions = [2, 32, 32, 1]\n",
+    "# Defines the network architecture\n",
+    "dimensions = [2, 32, 32, 1] \n",
     "\n",
-    "parameters = initialisation(dimensions)\n",
+    "# Initializes weights and biases\n",
+    "parameters = initialisation(dimensions)  \n",
     "\n",
+    "# Prints the shape of each weight and bias matrix\n",
     "for key, value in parameters.items():\n",
-    "    print(key, value.shape)\n"
+    "    print(key, value.shape)"
    ]
   },
   {
@@ -162,7 +181,7 @@
    "id": "6ee486f0",
    "metadata": {},
    "source": [
-    "# Forward propagation"
+    "## Forward propagation"
    ]
   },
   {
@@ -234,24 +253,42 @@
    "outputs": [],
    "source": [
     "def forward_propagation(X, parameters):\n",
-    "\n",
     "    activations = {}\n",
     "\n",
-    "    activations[f'A{0}'] = X.T\n",
-    "\n",
+    "    # Total number of layers (each has a W and b, so divide by 2)\n",
     "    L = len(parameters) // 2\n",
     "\n",
-    "    for i in range(1, L + 1):\n",
+    "    # Transpose the input matrix so that each column represents one example\n",
+    "    A = X.T\n",
     "\n",
-    "        W, b = parameters[f'W{i}'], parameters[f'b{i}']\n",
+    "    # Store the input layer activation (A0)\n",
+    "    activations['A0'] = A\n",
     "\n",
-    "        A = activations[f'A{i-1}']\n",
+    "    # Loop through all layers to compute activations\n",
+    "    for l in range(1, L + 1):\n",
+    "        # Get weights and biases for the current layer\n",
+    "        W = parameters[f'W{l}']\n",
+    "        b = parameters[f'b{l}']\n",
     "\n",
-    "        Z = W.dot(A) + b\n",
+    "        # Layer computation\n",
+    "        Z = np.dot(W, A) + b\n",
     "\n",
-    "        activations[f'A{i}'] = 1 / (1 + np.exp(-Z))\n",
+    "        # Activation using sigmoid function\n",
+    "        A = 1 / (1 + np.exp(-Z))\n",
     "\n",
-    "    return activations"
+    "        # Save the current layer's activation in the dictionary\n",
+    "        activations[f'A{l}'] = A\n",
+    "\n",
+    "    # Return all computed activations\n",
+    "    return activations\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee58aed0",
+   "metadata": {},
+   "source": [
+    "The `forward_propagation` function generalizes activation computation in a multi-layer neural network. Each layer takes the activation from the previous layer $A^{[i-1]}$, applies a linear transformation $Z^{[i]} = W^{[i]} A^{[i-1]} + b^{[i]}$, and passes it through a sigmoid activation to obtain $A^{[i]}$. This process repeats for all layers, linking them in a chain-like structure. It enables information to flow from the input to the output, while each layer progressively extracts higher-level features from the data. This modular, differentiable architecture is essential for learning complex functions through gradient-based optimization.\n"
    ]
   },
   {
@@ -278,133 +315,113 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "26c1b1f1",
+   "cell_type": "markdown",
+   "id": "60d9b9b5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def back_propagation(X, y, parametres, activations):\n",
+    "## General Backpropagation Equations for Any Layer `l`\n",
     "\n",
-    "    A1 = activations['A1']\n",
-    "    A2 = activations['A2']\n",
-    "    W2 = parametres['W2']\n",
+    "### Forward Prop\n",
+    "For a layer `l`, the forward pass computes:\n",
+    "- $Z_l = W_l \\cdot A_{l-1} + b_l$\n",
+    "- $A_l = \\sigma(Z_l)$, where $\\sigma$ is the sigmoid activation function\n",
     "\n",
-    "    m = y.shape[0] \n",
+    "---\n",
     "\n",
-    "    dZ2 = A2 - y.T # Transpose y to match the shape of dZ2\n",
-    "    dW2 = 1 / m * dZ2.dot(A1.T)\n",
-    "    db2 = 1 / m * np.sum(dZ2, axis=1, keepdims = True)\n",
     "\n",
-    "    dZ1 = np.dot(W2.T, dZ2) * A1 * (1 - A1)\n",
-    "    dW1 = 1 / m * dZ1.dot(X.T)\n",
-    "    db1 = 1 / m * np.sum(dZ1, axis=1, keepdims = True)\n",
+    "### Backpropagation\n",
     "\n",
-    "    gradients = {\n",
-    "        'dW1' : dW1,\n",
-    "        'db1' : db1,\n",
-    "        'dW2' : dW2,\n",
-    "        'db2' : db2\n",
-    "    }\n",
-    "    \n",
-    "    return gradients\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "88bcc9c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def predict(X, parameters):\n",
-    "    activations = forward_propagation(X, parameters)\n",
-    "    A2 = activations['A2']\n",
-    "    return A2 >= 0.5"
+    "#### 1. For the Output Layer $l = L$\n",
+    "Assuming sigmoid activation and log-loss:\n",
+    "\n",
+    "- $dZ_L = A_L - Y$\n",
+    "- $\\frac{\\partial \\mathcal{L}}{\\partial W_L} = \\frac{1}{m} \\cdot dZ_L \\cdot A_{L-1}^T$\n",
+    "- $\\frac{\\partial \\mathcal{L}}{\\partial b_L} = \\frac{1}{m} \\cdot \\sum_{i=1}^m dZ_L^{(i)}$\n",
+    "\n",
+    "#### 2. For a Hidden Layer $l < L$\n",
+    "\n",
+    "- $dZ_l = (W_{l+1}^T \\cdot dZ_{l+1}) \\circ (A_l \\circ (1 - A_l))$\n",
+    "- $\\frac{\\partial \\mathcal{L}}{\\partial W_l} = \\frac{1}{m} \\cdot dZ_l \\cdot A_{l-1}^T$\n",
+    "- $\\frac{\\partial \\mathcal{L}}{\\partial b_l} = \\frac{1}{m} \\cdot \\sum_{i=1}^m dZ_l^{(i)}$\n",
+    "\n",
+    "Where:\n",
+    "- $m$ is the number of examples\n",
+    "- $A_{l-1}$ is the activation from the previous layer\n",
+    "- $dZ_l$ is the error term at layer `l`\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Summary\n",
+    "\n",
+    "Backpropagation works by:\n",
+    "1. Computing the output error $dZ_L$\n",
+    "2. Propagating it backward through the network using weights and sigmoid derivative\n",
+    "3. Computing gradients $\\frac{\\partial \\mathcal{L}}{\\partial W_l}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_l}$ for all layers\n",
+    "4. Using these gradients to update weights and biases via gradient descent\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "754ac915",
+   "id": "26c1b1f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def neural_network2(X_train, y_train, X_test, y_test, n1=32, learning_rate=0.1, epoch=1000):\n",
-    "    def log_loss(A, y):\n",
-    "        m = len(y)\n",
-    "        epsilon = 1e-15\n",
-    "        return -1/m * np.sum(y * np.log(A + epsilon) + (1 - y) * np.log(1 - A + epsilon))\n",
+    "def back_propagation(y, parameters, activations):\n",
+    "    # Number of examples\n",
+    "    m = y.shape[1]\n",
     "\n",
-    "    # Dimensions\n",
-    "    n_init = X_train.shape[0]  # input dimension\n",
-    "    n_final = y_train.shape[1]  # output dimension (binary classification again between cats and dogs)\n",
+    "    # Number of layers\n",
+    "    L = len(parameters) // 2\n",
     "\n",
-    "    # Init\n",
-    "    np.random.seed(0)\n",
+    "    # Initialize dZ for the output layer: dZ = A_L - y\n",
+    "    activations[f'A{L}'].shape\n",
+    "    y.shape\n",
+    "    dZ = activations[f'A{L}'] - y\n",
     "\n",
-    "    # neural network structure initialisation\n",
-    "    parameters = initialisation(n_init, n1, n_final)\n",
+    "    # Dictionary to store gradients\n",
+    "    gradients = {}\n",
     "\n",
-    "    train_loss = []\n",
-    "    train_acc = []\n",
+    "    # Loop backward through the layers\n",
+    "    for l in reversed(range(1, L + 1)):\n",
+    "        # Compute gradients for weights and biases\n",
+    "        gradients[f'dW{l}'] = 1/m * np.dot(dZ, activations[f'A{l-1}'].T)\n",
+    "        gradients[f'db{l}'] = 1/m * np.sum(dZ, axis=1, keepdims=True)\n",
     "\n",
-    "    test_loss = []\n",
-    "    test_acc = []\n",
+    "        # If not the first layer, compute dZ for the previous layer\n",
+    "        if l > 1:\n",
+    "            dA_prev = np.dot(parameters[f'W{l}'].T, dZ)\n",
+    "            A_prev = activations[f'A{l-1}']\n",
+    "            dZ = dA_prev * A_prev * (1 - A_prev)  # derivative of sigmoid\n",
     "\n",
-    "    for i in tqdm(range(epoch)):\n",
-    "        # Forward\n",
-    "        activations = forward_propagation(X_train, parameters)\n",
-    "        A2 = activations['A2'].flatten()  # output\n",
-    "\n",
-    "        if i % 50 == 0:\n",
-    "            # Train\n",
-    "                # Loss\n",
-    "            y_train = y_train.flatten()\n",
-    "            train_loss.append(log_loss(A2, y_train))\n",
-    "\n",
-    "                # Accuracy\n",
-    "            y_pred = predict(X_train, parameters).flatten()\n",
-    "            train_acc.append(accuracy_score(y_train, y_pred))\n",
-    "\n",
-    "            # Test\n",
-    "            \n",
-    "            activations_test = forward_propagation(X_test, parameters)\n",
-    "            A2_test = activations_test['A2'].flatten()\n",
-    "                # Loss\n",
-    "            y_test = y_test.flatten()\n",
-    "            test_loss.append(log_loss(A2_test, y_test))\n",
-    "\n",
-    "                # Accuracy\n",
-    "            y_pred = predict(X_test, parameters).flatten()\n",
-    "            test_acc.append(accuracy_score(y_test, y_pred))\n",
-    "\n",
-    "\n",
-    "        # Update\n",
-    "        gradients = back_propagation(X_train, y_train, parameters, activations)\n",
-    "        parameters = update(gradients, parameters, learning_rate)\n",
-    "\n",
-    "    # Plot\n",
-    "    fig, ax = plt.subplots(1, 2, figsize=(12, 5))\n",
-    "    ax[0].plot(train_loss, label='Train Loss')\n",
-    "    ax[0].plot(test_loss, label='Test Loss')\n",
-    "    ax[0].set_title('Loss')\n",
-    "    ax[0].set_xlabel('Epochs')\n",
-    "    ax[0].set_ylabel('Loss')\n",
-    "    ax[0].legend()\n",
-    "    ax[1].plot(train_acc, label='Train Accuracy')\n",
-    "    ax[1].plot(test_acc, label='Test Accuracy')\n",
-    "    ax[1].set_title('Accuracy')\n",
-    "    ax[1].set_xlabel('Epochs')\n",
-    "    ax[1].set_ylabel('Accuracy')\n",
-    "    ax[1].legend()\n",
-    "    plt.tight_layout()\n",
-    "    plt.suptitle(\"Training and Test Loss/Accuracy\", fontsize=16)\n",
-    "    plt.subplots_adjust(top=0.93)   \n",
-    "\n",
-    "    plt.show()\n",
-    "\n",
-    "    return parameters\n"
+    "    return gradients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "649385e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (32,1) and (100,100) not aligned: 1 (dim 1) != 100 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Compute gradients using backpropagation\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m gradients \u001b[38;5;241m=\u001b[39m \u001b[43mback_propagation\u001b[49m\u001b[43m(\u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mactivations\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key, value \u001b[38;5;129;01min\u001b[39;00m gradients\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(key, value\u001b[38;5;241m.\u001b[39mshape)\n",
+      "Cell \u001b[0;32mIn[12], line 24\u001b[0m, in \u001b[0;36mback_propagation\u001b[0;34m(y, parameters, activations)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# If not the first layer, compute dZ for the previous layer\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m l \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m---> 24\u001b[0m     dA_prev \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparameters\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mW\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43ml\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdZ\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     25\u001b[0m     A_prev \u001b[38;5;241m=\u001b[39m activations[\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mA\u001b[39m\u001b[38;5;132;01m{\u001b[39;00ml\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     26\u001b[0m     dZ \u001b[38;5;241m=\u001b[39m dA_prev \u001b[38;5;241m*\u001b[39m A_prev \u001b[38;5;241m*\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m A_prev)  \u001b[38;5;66;03m# derivative of sigmoid\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: shapes (32,1) and (100,100) not aligned: 1 (dim 1) != 100 (dim 0)"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute gradients using backpropagation\n",
+    "gradients = back_propagation(y, parameters, activations)\n",
+    "for key, value in gradients.items():\n",
+    "    print(key, value.shape)"
    ]
   }
  ],
