--- a/notebooks/practice_03.ipynb
+++ b/notebooks/practice_03.ipynb
@@ -994,7 +994,7 @@
    "source": [
     "That's better, the model just needed neurons and layers to learn the data set.\n",
     "\n",
-    "Burt be careful, the model is not perfect.\\\n",
+    "But be careful, the model is not perfect.\\\n",
     "Sometimes, adding more layers and neurons can confuse the model.\\\n",
     "The model can learn the data set, but it can also learn the noise of the data set.\\\n",
     "This is called overfitting.\n",
