--- a/notebooks/practice_03.ipynb
+++ b/notebooks/practice_03.ipynb
@@ -1154,18 +1154,26 @@
     "\n",
     "Even worse, with too much neurons, the overfitting can be much worse because the model is really too complex.\n",
     "\n",
-    "You have to ask yourself the a million dollar question:\\\n",
+    "You have to ask yourself the million dollar question:\\\n",
     "**“Is this a problem with the data, the model, or the training?”**\n",
     "\n",
-    "Let's say we have a good model. Here, there's a problem on the test set, meaning that we are not able to train it properly. \n",
+    "Let's say we have a good model. Here, there's a problem on the test set, meaning that we are not able to train the model properly. \n",
     "\n",
-    "But the real problem here, is that the data is not enough to train a model with so many parameters. There are not enough images of cats and dogs to train a model with so many parameters.\n",
+    "But the real problem here, is that the data is not enough to train a model with so many parameters. There are not enough images of cats and dogs to train a model with so many parameters. Let's stop here this journey.\n",
     "\n",
     "## Conclusion\n",
     "**You can be proud of yourself, for taking the lead of your own learning process.**\n",
     "\n",
     "Now that I have lightened the candle, do you want to start the fire ?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3348e9e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1216,6 +1224,12 @@
     "\n",
     "**Only you can decide that.**\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c298163a",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
