--- a/notebooks/practice_03.ipynb
+++ b/notebooks/practice_03.ipynb
@@ -259,10 +259,8 @@
     "    # Total number of layers (each has a W and b, so divide by 2)\n",
     "    L = len(parameters) // 2\n",
     "\n",
-    "    # Transpose the input matrix so that each column represents one example\n",
-    "    A = X\n",
-    "\n",
     "    # Store the input layer activation (A0)\n",
+    "    A = X\n",
     "    activations['A0'] = A\n",
     "\n",
     "    # Loop through all layers to compute activations\n",
@@ -281,7 +279,7 @@
     "        activations[f'A{l}'] = A\n",
     "\n",
     "    # Return all computed activations\n",
-    "    return activations\n"
+    "    return activations"
    ]
   },
   {
