--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# What is a Neural Network?\n",
     "\n",
-    "A neural network is... a network of neurons.\n",
+    "A neural network is... a network of neurons./\n",
     "So let's first understand how a single neuron works, before understanding how the network works.\n",
     "\n",
     "Honestly, we could stop all the theory here by saying the most important thing in AI:\n",
@@ -16,22 +16,23 @@
     "At the beginning of your AI journey, when you are building your first deep learning models, many of your questions can be answered by remembering:\n",
     " **A neuron is a linear function. Always keep that in mind.**\n",
     "\n",
-    "However, the mathematical model of a neuron is slightly different — and that's where confusion often comes from.\n",
+    "However, how the neuron works is slightly different — and that's where confusion often comes from.\n",
     "\n",
     "So here’s the second most important thing to know about AI:\n",
-    "> **The architecture of an artificial neuron model is always the same. Always.**\n",
+    "> **The architecture of a deep learning algorithm is always the same. Always.**\n",
     "\n",
     "Here’s the architecture:\n",
     "\n",
-    "- A mathematical model that processes the input data\n",
+    "- A linear function that processes the input data\n",
     "- An activation function\n",
     "- A performance measurement\n",
     "- An optimization process to improve performance\n",
     "\n",
-    "This structure is always the same for every neuron (and therefore every neural network).\n",
+    "This structure is always the same for every deep learning algorithm : **it is true for a single neuron, it is true for a neural network.**\n",
+    "\n",
     "What changes is the content: the choice of mathematical models for (1), (2), (3), and (4).\n",
     "\n",
-    "To really understand this, let’s walk through an example!\n"
+    "To really understand this, let’s walk through an example.\n"
    ]
   },
   {
