--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -7,8 +7,7 @@
    "source": [
     "# What is a Neural Network?\n",
     "\n",
-    "A neural network is... a network of neurons./\n",
-    "So let's first understand how a single neuron works, before understanding how the network works.\n",
+    "A neural network is... a network of neurons. So let's first understand how a single neuron works, before understanding how the network works.\n",
     "\n",
     "Honestly, we could stop all the theory here by saying the most important thing in AI:\n",
     "> **A neuron is just a linear function.**\n",
