--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -7,18 +7,20 @@
    "source": [
     "# What is a Neural Network?\n",
     "\n",
-    "A neural network is... a network of neurons. So let's first understand how a single neuron works, before understanding how the network works.\n",
+    "A neural network is... a network of neurons. I am not not joking. A neural network is like a team of decision-makers (neurons), each making a tiny choice based on inputs. Combined, they learn complex patterns — like how you recognize faces or letters.\n",
+    "\n",
+    "If a understand how a neuron works, you'll understand how a network of neurons works. So let's first understand how a single neuron works, before understanding how a network of neurons works.\n",
     "\n",
     "Honestly, we could stop all the theory here by saying the most important thing in AI:\n",
     "> **A neuron is just a linear function.**\n",
     "\n",
     "At the beginning of your AI journey, when you are building your first deep learning models, many of your questions can be answered by remembering:\n",
-    " **A neuron is a linear function. Always keep that in mind.**\n",
+    "> A neuron is a linear function. Always keep that in mind.\n",
     "\n",
-    "However, how the neuron works is slightly different — and that's where confusion often comes from.\n",
+    "However, HOW the neuron works is slightly different — and that's where confusion often comes from.\n",
     "\n",
     "So here’s the second most important thing to know about AI:\n",
-    "> **The architecture of a deep learning algorithm is always the same. Always.**\n",
+    "> **How a deep learning algorithm (from neuron, to neural networks) works is always the same. Always.**\n",
     "\n",
     "Here’s the architecture:\n",
     "\n",
@@ -31,6 +33,8 @@
     "\n",
     "What changes is the content: the choice of mathematical models for (1), (2), (3), and (4).\n",
     "\n",
+    "The methodology of the recipe is always the same. What changes is the ingredients you decide to use.\n",
+    "\n",
     "To really understand this, let’s walk through an example.\n"
    ]
   },
@@ -41,21 +45,19 @@
    "source": [
     "# Example: A Simple Binary Classification Problem\n",
     "\n",
-    "We will look at how the math behind this architecture works by taking a binary classification model. Don't be afraid of the terms, they will make sense later.\\\n",
-    "\n",
-    "> A neural network is like a team of decision-makers (neurons), each making a tiny choice based on inputs. Combined, they learn complex patterns — like how you recognize faces or letters.\n",
+    "We will have a look on how this architecture works by taking a binary classification model. Don't be afraid of the terms, they will make sense later. (2min)\n",
     "\n",
     "What you need to understand is that this model allows for linearly separating two classes.\n",
     "\n",
-    "Suppose we have two types of plants:\n",
-    "- Toxic plants (labeled $y = 1$)\n",
-    "- Non-toxic plants (labeled $y = 0$)\n",
+    "Suppose we have two types of plants (two classes):\n",
+    "- Toxic plants (labeled $y = 1$, class 1)\n",
+    "- Non-toxic plants (labeled $y = 0$, class 0)\n",
     "\n",
     "We decide to measure two features:\n",
     "- $x_1$: the length of the leaves\n",
     "- $x_2$: the width of the leaves\n",
     "\n",
-    "If we plot these measurements, we observe that the two types of plants can be linearly separated."
+    "So each plant can be represented as a data $x = (x_1, x_2)$."
    ]
   },
   {
@@ -63,7 +65,7 @@
    "id": "d3bdf247",
    "metadata": {},
    "source": [
-    "For exemple, we have this dataset:"
+    "For example, let's say we have this dataset when we plot these measurements :"
    ]
   },
   {
@@ -110,8 +112,13 @@
    "id": "99f44f08",
    "metadata": {},
    "source": [
-    "To find the equation of the decision boundary (the line that separates the two kind of plants), we build a linear model:\n",
-    "each input $x$ is multiplied by a weight $w$, and we add a bias term $b$.\n",
+    "To find the equation of the decision boundary (the line that separates the two kind of plants), we build a deep learning algorithm : a neuron.\n",
+    "\n",
+    "This base unity has been thought by Mr.Rosenblatt in 1958. Let's debunk how it works.\n",
+    "\n",
+    "Each input $x$ (plant = dot) is multiplied by a weight $w$, and we add a bias term $b$. This is the linear model.\n",
+    "\n",
+    "Each input has two features : length and width, so we have to adapt the weights, for them to act on each feature : $w = (w_1, w_2)$. For the bias, it acts on both features at the same time.\n",
     "\n",
     "Here’s how a neuron looks:"
    ]
@@ -146,14 +153,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "904ba1fb",
+   "metadata": {},
+   "source": [
+    "> Now you see the linear function on each feature ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a9840d67",
    "metadata": {},
    "source": [
     "# How Does This Neuron Work?\n",
     "\n",
-    "To predict the plant class, we need to adjust the parameters $w$ and $b$ so that the neuron separates the two groups as accurately as possible.\n",
+    "The output of this neuron gives a output value $z$.\n",
     "\n",
-    "This is exactly how the first neuron in history (the Perceptron) worked, developed by Rosenblatt in 1958."
+    "To predict the plant class according to its output value, we need to give a sense to this output value. What does it mean ? How to change it to predict the good class ?"
    ]
   },
   {
@@ -163,7 +178,7 @@
    "source": [
     "# Adding a Sense of Probability: Activation Functions\n",
     "\n",
-    "However, we would also like to have a probability associated with each prediction. Indeed, the further a plant is from the decision boundary, the more confident we want to be about its classification. To achieve this, we use an activation function that \"activates\" the neuron based on a rule, criterion defined by that function. \n",
+    "To give sense to this output value, we will add an associated probability for each prediction (each output). Indeed, the further a plant is from the decision boundary, the more confident we want to be about its classification. To achieve this, we use an activation function that \"activates\" the neuron based on a rule, criterion defined by that function. \n",
     "\n",
     "For example, we can use the **sigmoid function**. A common choice which maps any output to a probability between 0 and 1.\\\n",
     "If the probability is greater than 0.5, we classify the plant into **Class 1** (e.g., toxic). Otherwise, we classify it into **Class 0** (e.g., non-toxic).\\\n",
