--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -182,7 +182,7 @@
     "\n",
     "For example, we can use the **sigmoid function**. A common choice which maps any output to a probability between 0 and 1.\\\n",
     "If the probability is greater than 0.5, we classify the plant into **Class 1** (e.g., toxic). Otherwise, we classify it into **Class 0** (e.g., non-toxic).\\\n",
-    "This gives us a **binary classification model** that predicts which class a plant belongs to based on its attributes.\n",
+    "This gives us a **binary classification model** that predicts which class a plant belongs to based on its attributes. Understand why it is a binary classification problem now ?\n",
     "\n",
     "While the sigmoid function is commonly used, other activation functions like **ReLU** or **tanh** can also be used. However, the principle remains the same: we apply an activation function to the neuron's output to obtain a probability.\n",
     "\n",
