--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Here’s the architecture:\n",
     "\n",
-    "- A linear function that processes the input data\n",
+    "- 1) A linear function that processes the input data\n",
     "- An activation function\n",
     "- A performance measurement\n",
     "- An optimization process to improve performance\n",
