--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -24,10 +24,10 @@
     "\n",
     "Here’s the architecture:\n",
     "\n",
-    "- 1) A linear function that processes the input data\n",
-    "- An activation function\n",
-    "- A performance measurement\n",
-    "- An optimization process to improve performance\n",
+    "1) A linear function that processes the input data\n",
+    "2) An activation function\n",
+    "3) A performance measurement\n",
+    "4) An optimization process to improve performance\n",
     "\n",
     "This structure is always the same for every deep learning algorithm : **it is true for a single neuron, it is true for a neural network.**\n",
     "\n",
