--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -116,6 +116,8 @@
     "\n",
     "This base unity has been thought by Mr.Rosenblatt in 1958. Let's debunk how it works.\n",
     "\n",
+    "## 1. Process the input data: a linear function\n",
+    "\n",
     "Each input $x$ (plant = dot) is multiplied by a weight $w$, and we add a bias term $b$. This is the linear model.\n",
     "\n",
     "Each input has two features : length and width, so we have to adapt the weights, for them to act on each feature : $w = (w_1, w_2)$. For the bias, it acts on both features at the same time.\n",
@@ -164,7 +166,7 @@
    "id": "a9840d67",
    "metadata": {},
    "source": [
-    "# How Does This Neuron Work?\n",
+    "### How Does This Neuron Work?\n",
     "\n",
     "The output of this neuron gives a output value $z$.\n",
     "\n",
@@ -176,7 +178,7 @@
    "id": "558e53b3",
    "metadata": {},
    "source": [
-    "# Adding a Sense of Probability: Activation Functions\n",
+    "## 2. Adding a Sense of Probability: Activation Functions\n",
     "\n",
     "To give sense to this output value, we will add an associated probability for each prediction (each output). Indeed, the further a plant is from the decision boundary, the more confident we want to be about its classification. To achieve this, we use an activation function that \"activates\" the neuron based on a rule, criterion defined by that function. \n",
     "\n",
