--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -625,9 +625,11 @@
     "\n",
     "Yeah.. the usual deep learning book would stop here and tell you the gradients. It would say: using these gradients find by... who ?! The author ? The teacher ? The internet ?!\n",
     "\n",
-    "You really want to feel like someone who knows what he's doing, right ? You don't want to be a parrot that repeats what others say.\\ We are going to calculate the gradients ourselves.\n",
+    "You really want to feel like someone who knows what he's doing, right ? You don't want to be a parrot that repeats what others say.\n",
     "\n",
-    "For this, we need to know the expression of these famous gradients that come into play in gradient descent. It's math, it's not fun, but it's important. So, let's calculate them together, step by step.\n"
+    "We are going to calculate the gradients ourselves.\n",
+    "\n",
+    "It's math, it's not fun, but it's necessary. So stop complaining and act for your self-taught learning journey.\n"
    ]
   },
   {
